--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "daisyui": "^1.14.0",
+    "mapbox-gl": "^2.4.1",
     "react": "^17.0.2",
+    "react-accessible-accordion": "^3.3.5",
+    "react-awesome-modal": "^2.0.5",
     "react-dom": "^17.0.2",
     "react-qr-reader": "^2.2.1",
     "react-redux": "^7.2.5",
