--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "animate.css": "^4.1.1",
     "axios": "^0.21.4",
     "daisyui": "^1.14.0",
+    "firebase": "^9.0.2",
     "mapbox-gl": "^2.4.1",
     "react": "^17.0.2",
     "react-accessible-accordion": "^3.3.5",
     "react-awesome-modal": "^2.0.5",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^3.0.4",
     "react-qr-reader": "^2.2.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
