--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-awesome-modal": "^2.0.5",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.4",
+    "react-loading": "^2.0.3",
     "react-qr-reader": "^2.2.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
